fix: honeypot input is now hidden on mobile

--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -27,6 +27,9 @@ label.required:after {
 	width: 0;
 	border: none;
 	text-decoration: none;
+	input {
+		visibility: hidden;
+	}
 }
 
 button[type="submit"] {
